Fixed spacing

--- a/web/_css/home.css
+++ b/web/_css/home.css
@@ -186,8 +186,8 @@ footer {
 .title {
   margin-left: 20%;
   margin-right: 20%;
-  padding-bottom: 20px;
-  padding-top: 20px;
+  padding-bottom: 10px;
+  padding-top: 10px;
   font-size: 18pt;
   font-family: arial;
   text-align: center;
@@ -212,7 +212,7 @@ footer {
   font-size: 18pt;
   color: #000000;
   width: 500px;
-  padding-top: 20px;
+  padding-top: 10px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
